Update: 每个故事包提供120分钟内容(40个故事)

--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                     <h3 class="product-title">哄睡故事包</h3>
                     <p class="product-desc">舒缓、温暖，帮助孩子安然入睡</p>
                     <ul class="product-features">
-                        <li>✓ 12个精心挑选的睡前故事</li>
+                        <li>✓ 40个精心挑选的睡前故事</li>
+                        <li>✓ 总时长120分钟</li>
                         <li>✓ 可永久使用，反复收听</li>
-                        <li>✓ 舒缓的音乐和节奏</li>
                         <li>✓ 培养良好睡眠习惯</li>
                     </ul>
                     <div class="product-price">
@@ -174,9 +174,9 @@
                     <h3 class="product-title">勇敢成长包</h3>
                     <p class="product-desc">培养勇气、自信、独立品质</p>
                     <ul class="product-features">
-                        <li>✓ 12个勇敢冒险故事</li>
+                        <li>✓ 40个勇敢冒险故事</li>
+                        <li>✓ 总时长120分钟</li>
                         <li>✓ 可永久使用，反复收听</li>
-                        <li>✓ 正能量主题</li>
                         <li>✓ 培养独立精神</li>
                     </ul>
                     <div class="product-price">
@@ -194,9 +194,9 @@
                     <h3 class="product-title">情绪管理包</h3>
                     <p class="product-desc">学会管理情绪，培养情商</p>
                     <ul class="product-features">
-                        <li>✓ 12个情绪教育故事</li>
+                        <li>✓ 40个情绪教育故事</li>
+                        <li>✓ 总时长120分钟</li>
                         <li>✓ 可永久使用，反复收听</li>
-                        <li>✓ 友谊、分享、共情</li>
                         <li>✓ 提升社交能力</li>
                     </ul>
                     <div class="product-price">
@@ -215,8 +215,8 @@
                     <h3 class="product-title">全能组合包</h3>
                     <p class="product-desc">三大场景全覆盖，性价比最高</p>
                     <ul class="product-features">
-                        <li>✓ 36个精选故事</li>
-                        <li>✓ 总时长约3小时</li>
+                        <li>✓ 120个精选故事</li>
+                        <li>✓ 总时长360分钟(6小时)</li>
                         <li>✓ 包含所有场景</li>
                         <li>✓ 适合长期使用</li>
                     </ul>
