--- a/payment-result.html
+++ b/payment-result.html
@@ -147,7 +147,7 @@
                 <div class="qrcode-section">
                     <p style="color: #333; font-weight: 600; margin-bottom: 10px;">扫码添加客服微信</p>
                     <div class="qrcode-img">
-                        <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='180' height='180'%3E%3Crect width='180' height='180' fill='%23f0f0f0'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-size='14' fill='%23999'%3E微信二维码%3C/text%3E%3C/svg%3E" alt="微信二维码" style="width: 100%; height: 100%;">
+                        <img src="images/wechat-qrcode.png" alt="微信客服二维码" style="width: 100%; height: 100%;">
                     </div>
                     <div class="qrcode-text">
                         <p><strong>扫一扫上面的二维码图案，加我为朋友。</strong></p>
