--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
             <div class="trial-banner">
                 <div class="trial-content">
                     <h3>🎁 第一次尝试？</h3>
-                    <p>花19元，获得30分钟的克隆故事，体验AI定制语音的魅力</p>
+                    <p>花9.9元，获得15分钟的克隆故事，体验AI定制语音的魅力</p>
                     <button class="btn btn-trial" onclick="selectProduct('trial')">
-                        ¥19 立即体验
+                        ￥9.9 立即体验
                     </button>
                 </div>
             </div>
