简化确认订单页面：移除支付方式选择，优化按钮和提示文案

--- a/index.html
+++ b/index.html
@@ -322,14 +322,12 @@
                     <div class="step-content">
                         <h3>录制声音</h3>
                         <p>在线录音10秒，按文本朗读即可</p>
-                    </div>
-                </div>
                 <div class="step-arrow">→</div>
                 <div class="step">
                     <div class="step-number">3</div>
                     <div class="step-content">
                         <h3>支付订单</h3>
-                        <p>支付宝支付，安全便捷</p>
+                        <p>跳转支付页面，安全便捷</p>
                     </div>
                 </div>
                 <div class="step-arrow">→</div>
@@ -534,24 +532,13 @@
                     </div>
                 </div>
 
-                <div class="payment-methods">
-                    <h3>选择支付方式</h3>
-                    <div class="payment-option">
-                        <input type="radio" name="payment" id="alipay" value="alipay" checked>
-                        <label for="alipay">
-                            <img src="https://img.alicdn.com/tfs/TB1Y5uwexD1gK0jSZFyXXciOVXa-60-60.png" alt="支付宝">
-                            支付宝
-                        </label>
-                    </div>
-                </div>
-
                 <button id="submitPayment" class="btn btn-primary btn-block">
-                    立即支付
+                    确认订单，前往支付
                 </button>
 
                 <p class="payment-note">
-                    * 点击支付后将跳转到支付页面，请在30分钟内完成支付<br>
-                    * 支付成功后，我们将在24小时内发送故事包到您的邮箱
+                    * 点击后将跳转到支付页面<br>
+                    * 支付成功后，我们将在24-48小时内发送故事包到您的邮箱
                 </p>
             </div>
         </div>
