修复三个问题：1.音频预览路径添加前导斜杠 2.支付成功页面跳转添加.html扩展名 3.添加详细日志帮助调试邮件和录音文件

--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
                 <div class="audio-card">
                     <div class="audio-label">示例1: 妈妈的声音 - 睡前故事</div>
                     <audio controls class="audio-player">
-                        <source src="images/mama.wav" type="audio/wav">
+                        <source src="/images/mama.wav" type="audio/wav">
                         您的浏览器不支持音频播放
                     </audio>
                     <p class="audio-note">*这是用一位妈妈录制10秒后的声音生成的</p>
@@ -131,7 +131,7 @@
                 <div class="audio-card">
                     <div class="audio-label">示例2: 爸爸的声音 - 冒险故事</div>
                     <audio controls class="audio-player">
-                        <source src="images/baba.wav" type="audio/wav">
+                        <source src="/images/baba.wav" type="audio/wav">
                         您的浏览器不支持音频播放
                     </audio>
                     <p class="audio-note">*这是用一位爸爸录制10秒后的声音生成的</p>
