修复右上角立即体验按钮：添加#trial锚点，跳转到体验包区域

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
                 <a href="#products" class="nav-link">故事包</a>
                 <a href="#how-it-works" class="nav-link">如何使用</a>
                 <a href="#faq" class="nav-link">常见问题</a>
-                <a href="#order" class="nav-link cta-button">立即体验</a>
+                <a href="#trial" class="nav-link cta-button">立即体验</a>
             </div>
         </div>
     </nav>
@@ -148,7 +148,7 @@
             <p class="section-subtitle">精心策划的故事场景，满足不同需求</p>
 
             <!-- 体验包 - 特殊样式 -->
-            <div class="trial-banner">
+            <div id="trial" class="trial-banner">
                 <div class="trial-content">
                     <h3>🎁 第一次尝试？</h3>
                     <p>花9.9元，获得15分钟的克隆故事，体验AI定制语音的魅力</p>
