修复支付结果页面微信二维码路径，添加前导斜杠

--- a/public/payment-result.html
+++ b/public/payment-result.html
@@ -147,7 +147,7 @@
                 <div class="qrcode-section">
                     <p style="color: #333; font-weight: 600; margin-bottom: 10px;">扫码添加客服微信</p>
                     <div class="qrcode-img">
-                        <img src="images/wechat-qrcode.png" alt="微信客服二维码" style="width: 100%; height: 100%;">
+                        <img src="/images/wechat-qrcode.png" alt="微信客服二维码" style="width: 100%; height: 100%;">
                     </div>
                     <div class="qrcode-text">
                         <p><strong>扫一扫上面的二维码图案，加我为朋友。</strong></p>
