简化流程：删除录音小贴士和订单确认页面，点击提交订单直接保存到飞书并跳转支付

--- a/public/index.html
+++ b/public/index.html
@@ -507,51 +507,11 @@
                     <audio id="audioPreview" controls style="display: none; width: 100%; margin-top: 20px;"></audio>
                 </div>
 
-                <div class="recording-tips">
-                    <h4>录音小贴士：</h4>
-                    <ul>
-                        <li>请在安静的环境下录音</li>
-                        <li>跟随彩色文字的速度朗读</li>
-                        <li>用自然的语气，像平时说话一样</li>
-                        <li>保持与麦克风的距离（约15-20厘米）</li>
-                    </ul>
-                </div>
-
                 <button id="confirmRecording" class="btn btn-success btn-block" style="display: none; margin-top: 20px;">
-                    确认并前往支付
+                    提交订单
                 </button>
             </div>
 
-            <div id="payment-section" style="display: none;">
-                <h2>确认订单</h2>
-                <div class="order-summary">
-                    <div class="summary-item">
-                        <span>故事包：</span>
-                        <span id="summary-product"></span>
-                    </div>
-                    <div class="summary-item">
-                        <span>宝宝：</span>
-                        <span id="summary-name"></span>
-                    </div>
-                    <div class="summary-item">
-                        <span>邮箱：</span>
-                        <span id="summary-email"></span>
-                    </div>
-                    <div class="summary-item total">
-                        <span>支付金额：</span>
-                        <span id="summary-price" class="price-highlight"></span>
-                    </div>
-                </div>
-
-                <button id="submitPayment" class="btn btn-primary btn-block">
-                    确认订单，前往支付
-                </button>
-
-                <p class="payment-note">
-                    * 点击后将跳转到支付页面<br>
-                    * 支付成功后，我们将在24-48小时内发送故事包到您的邮箱
-                </p>
-            </div>
         </div>
     </div>
 
